# Jobfull-Resume-Analyzer

./: README.md
cv_opt/: README.md  pyproject.toml
cv_opt/output/: company_research.json  cover_letter.md  cover_letter_analysis.json  final_report.md  job_analysis.json  optimized_resume.md  resume_optimization.json
cv_opt/src/cv_opt/: crew.py  main.py  models.py
cv_opt/src/cv_opt/config/: agents.yaml  tasks.yaml
docs/: configuration-guide.md  data-models.md  output-specifications.md  system-architecture.md  task-orchestration.md  troubleshooting.md  usage-examples.md
docs/agents/: README.md  company-researcher.md  cover-letter-generator.md  job-analyzer.md  report-generator.md  resume-analyzer.md  resume-writer.md
